--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -11,6 +11,7 @@
   flex: 1;
   height: 350px;
   position: relative;
+  min-width: 0;
 }
 .image {
   object-fit: cover;
@@ -21,6 +22,7 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+  min-width: 0;
 }
 
 .date {
