--- a/src/components/cardList/CardList.module.css
+++ b/src/components/cardList/CardList.module.css
@@ -1,5 +1,10 @@
 .container {
   flex: 5;
+  min-width: 0;
+}
+
+.posts {
+  min-width: 0;
 }
 
 .title {
