--- a/src/components/menuPosts/MenuPosts.module.css
+++ b/src/components/menuPosts/MenuPosts.module.css
@@ -6,6 +6,7 @@
   gap: 35px;
   overflow-wrap: anywhere;
   word-break: break-all;
+  min-width: 0;
 }
 
 .item {
@@ -18,6 +19,7 @@
   flex: 1;
   aspect-ratio: 1/1;
   position: relative;
+  min-width: 0;
 }
 
 .image {
@@ -31,6 +33,7 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+  min-width: 0;
 }
 
 .postTitle {
